--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
         <img src="icon/school_logo.jpg" alt="شعار المدرسة" class="school-logo">
         <h1>الدرجات و إستمارة التقييم</h1>
-        <p>أدخل الكود في مربع البحث أدناه:</p>
+        <p>          : ادخل الكود في مربع البحث أدناه   </p>
         
         <div class="input-group">
             <button id="searchButton">
@@ -30,7 +30,7 @@
             <ul>
 
                 <li> .  تاكد من ادخال الكود بشكل صحيح </li>
-                <li>   بعد ادخال الكود قم بالضغط على مربع "بحث" واذهب الى اسفل الصحة</li>
+                <li>   بعد ادخال الكود قم بالضغط على مربع "بحث" واذهب الى اسفل الصفحة وانتظر قليلا حتى اكتمال تحميل الدرجة </li>
                 <li> .  في حالة وجود مشكلة يرجى التواصل مع ادارة الموقع</li>
 
             </ul>
